--- a/log.ini
+++ b/log.ini
@@ -2,19 +2,20 @@
 keys=root
 
 [handlers]
-keys=console,file
+keys=consoleHandler,file
 
 [formatters]
 keys=default
 
 [logger_root]
 level=INFO
-handlers=console,file
+handlers=consoleHandler,file
 
-[handler_console]
+[handler_consoleHandler]
 class=StreamHandler
-args=(sys.stdout,)
+level=INFO
 formatter=default
+args=(sys.stdout,)
 
 [handler_file]
 class=FileHandler
@@ -22,4 +23,4 @@ args=('main.log',)
 formatter=default
 
 [formatter_default]
-format=[%(asctime)s] %(levelname)s - %(name)s - %(message)s
+format=[%(asctime)s] %(levelname)s - %(module)s - %(funcName)s - %(lineno)d - %(message)s
