--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic == 1.11.3
 boto3 == 1.26.155
 factory-boy == 3.2.1 
 fastapi == 0.96.0
+httpx == 0.25.0
 pandas == 2.0.2
 poetry==1.5.1
 pydantic == 1.10.9
